@@ -1,4 +1,4 @@
-.TH SDPARM "8" "February 2016" "sdparm\-1.11" SDPARM
+.TH SDPARM "8" "March 2016" "sdparm\-1.11" SDPARM
 .SH NAME
 sdparm \- access SCSI modes pages; read VPD pages; send simple SCSI commands.
 .SH SYNOPSIS
